Feat/method authorizate (#4)
* updated procfile

* updated swagger and remove middlewares folder
